CMMParser.java
// $ANTLR 3.4 CMM.g 2012-10-14 12:25:27

	import java.util.Set;
	import java.util.HashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class CMMParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "EQ_OP", "IDENTIFIER", "INT_LITERAL", "LETTER", "LINE_COMMENT", "NE_OP", "REAL_LITERAL", "WS", "'('", "')'", "'*'", "'*='", "'+'", "'+='", "','", "'-'", "'-='", "'/'", "'/='", "';'", "'<'", "'='", "'['", "']'", "'else'", "'if'", "'int'", "'real'", "'while'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int COMMENT=4;
    public static final int EQ_OP=5;
    public static final int IDENTIFIER=6;
    public static final int INT_LITERAL=7;
    public static final int LETTER=8;
    public static final int LINE_COMMENT=9;
    public static final int NE_OP=10;
    public static final int REAL_LITERAL=11;
    public static final int WS=12;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators

    protected static class Symbols_scope {
        Set types;
        HashMap values;
    }
    protected Stack Symbols_stack = new Stack();



    public CMMParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public CMMParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
        this.state.ruleMemo = new HashMap[57+1];
         

    }

    public String[] getTokenNames() { return CMMParser.tokenNames; }
    public String getGrammarFileName() { return "CMM.g"; }


    	Object getValue(String name) {
    		for (int i = Symbols_stack.size()-1; i>=0; i--) {
    			Symbols_scope scope = (Symbols_scope)Symbols_stack.get(i);
    			if ( scope.values.containsKey(name) ) {
    				return scope.values.get(name);
    			}
    		}
    		return new Object();
    	}



    // $ANTLR start "prog"
    // CMM.g:39:1: prog : statement ;
    public final void prog() throws RecognitionException {
        Symbols_stack.push(new Symbols_scope());

        int prog_StartIndex = input.index();


          ((Symbols_scope)Symbols_stack.peek()).values = new HashMap();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return ; }

            // CMM.g:44:2: ( statement )
            // CMM.g:44:4: statement
            {
            pushFollow(FOLLOW_statement_in_prog60);
            statement();

            state._fsp--;
            if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 1, prog_StartIndex); }

            Symbols_stack.pop();

        }
        return ;
    }
    // $ANTLR end "prog"



    // $ANTLR start "statement"
    // CMM.g:46:1: statement : ( compound_statement | expression_statement | selection_statement | iteration_statement | declaration );
    public final void statement() throws RecognitionException {
        int statement_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return ; }

            // CMM.g:47:2: ( compound_statement | expression_statement | selection_statement | iteration_statement | declaration )
            int alt1=5;
            switch ( input.LA(1) ) {
            case 34:
                {
                alt1=1;
                }
                break;
            case IDENTIFIER:
            case INT_LITERAL:
            case REAL_LITERAL:
            case 13:
            case 17:
            case 20:
            case 24:
                {
                alt1=2;
                }
                break;
            case 30:
                {
                alt1=3;
                }
                break;
            case 33:
                {
                alt1=4;
                }
                break;
            case 31:
            case 32:
                {
                alt1=5;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }

            switch (alt1) {
                case 1 :
                    // CMM.g:47:4: compound_statement
                    {
                    pushFollow(FOLLOW_compound_statement_in_statement70);
                    compound_statement();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // CMM.g:48:4: expression_statement
                    {
                    pushFollow(FOLLOW_expression_statement_in_statement75);
                    expression_statement();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 3 :
                    // CMM.g:49:4: selection_statement
                    {
                    pushFollow(FOLLOW_selection_statement_in_statement80);
                    selection_statement();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 4 :
                    // CMM.g:50:4: iteration_statement
                    {
                    pushFollow(FOLLOW_iteration_statement_in_statement85);
                    iteration_statement();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 5 :
                    // CMM.g:51:4: declaration
                    {
                    pushFollow(FOLLOW_declaration_in_statement90);
                    declaration();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 2, statement_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "statement"



    // $ANTLR start "compound_statement"
    // CMM.g:53:1: compound_statement : ( '{' '}' | '{' statement_list '}' );
    public final void compound_statement() throws RecognitionException {
        Symbols_stack.push(new Symbols_scope());

        int compound_statement_StartIndex = input.index();


          ((Symbols_scope)Symbols_stack.peek()).values = new HashMap();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return ; }

            // CMM.g:58:2: ( '{' '}' | '{' statement_list '}' )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==34) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==35) ) {
                    alt2=1;
                }
                else if ( ((LA2_1 >= IDENTIFIER && LA2_1 <= INT_LITERAL)||LA2_1==REAL_LITERAL||LA2_1==13||LA2_1==17||LA2_1==20||LA2_1==24||(LA2_1 >= 30 && LA2_1 <= 34)) ) {
                    alt2=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;

                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }
            switch (alt2) {
                case 1 :
                    // CMM.g:58:4: '{' '}'
                    {
                    match(input,34,FOLLOW_34_in_compound_statement111); if (state.failed) return ;

                    match(input,35,FOLLOW_35_in_compound_statement113); if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // CMM.g:59:4: '{' statement_list '}'
                    {
                    match(input,34,FOLLOW_34_in_compound_statement118); if (state.failed) return ;

                    pushFollow(FOLLOW_statement_list_in_compound_statement120);
                    statement_list();

                    state._fsp--;
                    if (state.failed) return ;

                    match(input,35,FOLLOW_35_in_compound_statement122); if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 3, compound_statement_StartIndex); }

            Symbols_stack.pop();

        }
        return ;
    }
    // $ANTLR end "compound_statement"



    // $ANTLR start "statement_list"
    // CMM.g:61:1: statement_list : ( statement )+ ;
    public final void statement_list() throws RecognitionException {
        int statement_list_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return ; }

            // CMM.g:62:2: ( ( statement )+ )
            // CMM.g:62:4: ( statement )+
            {
            // CMM.g:62:4: ( statement )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( ((LA3_0 >= IDENTIFIER && LA3_0 <= INT_LITERAL)||LA3_0==REAL_LITERAL||LA3_0==13||LA3_0==17||LA3_0==20||LA3_0==24||(LA3_0 >= 30 && LA3_0 <= 34)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // CMM.g:62:4: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_statement_list132);
            	    statement();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
            	    if (state.backtracking>0) {state.failed=true; return ;}
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 4, statement_list_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "statement_list"



    // $ANTLR start "expression_statement"
    // CMM.g:64:1: expression_statement : ( ';' | expression ';' );
    public final void expression_statement() throws RecognitionException {
        int expression_statement_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return ; }

            // CMM.g:65:2: ( ';' | expression ';' )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==24) ) {
                alt4=1;
            }
            else if ( ((LA4_0 >= IDENTIFIER && LA4_0 <= INT_LITERAL)||LA4_0==REAL_LITERAL||LA4_0==13||LA4_0==17||LA4_0==20) ) {
                alt4=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // CMM.g:65:4: ';'
                    {
                    match(input,24,FOLLOW_24_in_expression_statement143); if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // CMM.g:66:4: expression ';'
                    {
                    pushFollow(FOLLOW_expression_in_expression_statement148);
                    expression();

                    state._fsp--;
                    if (state.failed) return ;

                    match(input,24,FOLLOW_24_in_expression_statement150); if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 5, expression_statement_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "expression_statement"



    // $ANTLR start "selection_statement"
    // CMM.g:68:1: selection_statement : 'if' '(' expression ')' statement ( options {k=1; backtrack=false; } : 'else' statement )? ;
    public final void selection_statement() throws RecognitionException {
        int selection_statement_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return ; }

            // CMM.g:69:2: ( 'if' '(' expression ')' statement ( options {k=1; backtrack=false; } : 'else' statement )? )
            // CMM.g:69:4: 'if' '(' expression ')' statement ( options {k=1; backtrack=false; } : 'else' statement )?
            {
            match(input,30,FOLLOW_30_in_selection_statement160); if (state.failed) return ;

            match(input,13,FOLLOW_13_in_selection_statement162); if (state.failed) return ;

            pushFollow(FOLLOW_expression_in_selection_statement164);
            expression();

            state._fsp--;
            if (state.failed) return ;

            match(input,14,FOLLOW_14_in_selection_statement166); if (state.failed) return ;

            pushFollow(FOLLOW_statement_in_selection_statement168);
            statement();

            state._fsp--;
            if (state.failed) return ;

            // CMM.g:69:38: ( options {k=1; backtrack=false; } : 'else' statement )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==29) ) {
                int LA5_1 = input.LA(2);

                if ( (true) ) {
                    alt5=1;
                }
            }
            switch (alt5) {
                case 1 :
                    // CMM.g:69:71: 'else' statement
                    {
                    match(input,29,FOLLOW_29_in_selection_statement183); if (state.failed) return ;

                    pushFollow(FOLLOW_statement_in_selection_statement185);
                    statement();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 6, selection_statement_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "selection_statement"



    // $ANTLR start "iteration_statement"
    // CMM.g:71:1: iteration_statement : 'while' '(' expression ')' statement ;
    public final void iteration_statement() throws RecognitionException {
        int iteration_statement_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return ; }

            // CMM.g:72:2: ( 'while' '(' expression ')' statement )
            // CMM.g:72:4: 'while' '(' expression ')' statement
            {
            match(input,33,FOLLOW_33_in_iteration_statement197); if (state.failed) return ;

            match(input,13,FOLLOW_13_in_iteration_statement199); if (state.failed) return ;

            pushFollow(FOLLOW_expression_in_iteration_statement201);
            expression();

            state._fsp--;
            if (state.failed) return ;

            match(input,14,FOLLOW_14_in_iteration_statement203); if (state.failed) return ;

            pushFollow(FOLLOW_statement_in_iteration_statement205);
            statement();

            state._fsp--;
            if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 7, iteration_statement_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "iteration_statement"



    // $ANTLR start "expression"
    // CMM.g:75:1: expression : assignment_expression ( ',' assignment_expression )* ;
    public final void expression() throws RecognitionException {
        int expression_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 8) ) { return ; }

            // CMM.g:76:2: ( assignment_expression ( ',' assignment_expression )* )
            // CMM.g:76:4: assignment_expression ( ',' assignment_expression )*
            {
            pushFollow(FOLLOW_assignment_expression_in_expression216);
            assignment_expression();

            state._fsp--;
            if (state.failed) return ;

            // CMM.g:76:26: ( ',' assignment_expression )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==19) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // CMM.g:76:28: ',' assignment_expression
            	    {
            	    match(input,19,FOLLOW_19_in_expression220); if (state.failed) return ;

            	    pushFollow(FOLLOW_assignment_expression_in_expression222);
            	    assignment_expression();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 8, expression_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "expression"



    // $ANTLR start "constant_expression"
    // CMM.g:78:1: constant_expression : equality_expression ;
    public final void constant_expression() throws RecognitionException {
        int constant_expression_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 9) ) { return ; }

            // CMM.g:79:2: ( equality_expression )
            // CMM.g:79:4: equality_expression
            {
            pushFollow(FOLLOW_equality_expression_in_constant_expression235);
            equality_expression();

            state._fsp--;
            if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 9, constant_expression_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "constant_expression"



    // $ANTLR start "assignment_expression"
    // CMM.g:81:1: assignment_expression : ( equality_expression | primary_expression assignment_operator assignment_expression );
    public final void assignment_expression() throws RecognitionException {
        int assignment_expression_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 10) ) { return ; }

            // CMM.g:82:2: ( equality_expression | primary_expression assignment_operator assignment_expression )
            int alt7=2;
            switch ( input.LA(1) ) {
            case INT_LITERAL:
                {
                int LA7_1 = input.LA(2);

                if ( (LA7_1==EOF||LA7_1==EQ_OP||LA7_1==NE_OP||(LA7_1 >= 14 && LA7_1 <= 15)||LA7_1==17||(LA7_1 >= 19 && LA7_1 <= 20)||LA7_1==22||(LA7_1 >= 24 && LA7_1 <= 25)||(LA7_1 >= 27 && LA7_1 <= 28)) ) {
                    alt7=1;
                }
                else if ( (LA7_1==16||LA7_1==18||LA7_1==21||LA7_1==23||LA7_1==26) ) {
                    alt7=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 1, input);

                    throw nvae;

                }
                }
                break;
            case REAL_LITERAL:
                {
                int LA7_2 = input.LA(2);

                if ( (LA7_2==EOF||LA7_2==EQ_OP||LA7_2==NE_OP||(LA7_2 >= 14 && LA7_2 <= 15)||LA7_2==17||(LA7_2 >= 19 && LA7_2 <= 20)||LA7_2==22||(LA7_2 >= 24 && LA7_2 <= 25)||(LA7_2 >= 27 && LA7_2 <= 28)) ) {
                    alt7=1;
                }
                else if ( (LA7_2==16||LA7_2==18||LA7_2==21||LA7_2==23||LA7_2==26) ) {
                    alt7=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 2, input);

                    throw nvae;

                }
                }
                break;
            case IDENTIFIER:
                {
                int LA7_3 = input.LA(2);

                if ( (LA7_3==EOF||LA7_3==EQ_OP||LA7_3==NE_OP||(LA7_3 >= 14 && LA7_3 <= 15)||LA7_3==17||(LA7_3 >= 19 && LA7_3 <= 20)||LA7_3==22||(LA7_3 >= 24 && LA7_3 <= 25)||(LA7_3 >= 27 && LA7_3 <= 28)) ) {
                    alt7=1;
                }
                else if ( (LA7_3==16||LA7_3==18||LA7_3==21||LA7_3==23||LA7_3==26) ) {
                    alt7=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 3, input);

                    throw nvae;

                }
                }
                break;
            case 13:
                {
                switch ( input.LA(2) ) {
                case INT_LITERAL:
                    {
                    int LA7_48 = input.LA(3);

                    if ( (synpred9_CMM()) ) {
                        alt7=1;
                    }
                    else if ( (true) ) {
                        alt7=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return ;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 7, 48, input);

                        throw nvae;

                    }
                    }
                    break;
                case REAL_LITERAL:
                    {
                    int LA7_49 = input.LA(3);

                    if ( (synpred9_CMM()) ) {
                        alt7=1;
                    }
                    else if ( (true) ) {
                        alt7=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return ;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 7, 49, input);

                        throw nvae;

                    }
                    }
                    break;
                case IDENTIFIER:
                    {
                    int LA7_50 = input.LA(3);

                    if ( (synpred9_CMM()) ) {
                        alt7=1;
                    }
                    else if ( (true) ) {
                        alt7=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return ;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 7, 50, input);

                        throw nvae;

                    }
                    }
                    break;
                case 13:
                    {
                    int LA7_51 = input.LA(3);

                    if ( (synpred9_CMM()) ) {
                        alt7=1;
                    }
                    else if ( (true) ) {
                        alt7=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return ;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 7, 51, input);

                        throw nvae;

                    }
                    }
                    break;
                case 17:
                case 20:
                    {
                    int LA7_52 = input.LA(3);

                    if ( (synpred9_CMM()) ) {
                        alt7=1;
                    }
                    else if ( (true) ) {
                        alt7=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return ;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 7, 52, input);

                        throw nvae;

                    }
                    }
                    break;
                default:
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 4, input);

                    throw nvae;

                }

                }
                break;
            case 17:
            case 20:
                {
                alt7=1;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;

            }

            switch (alt7) {
                case 1 :
                    // CMM.g:82:4: equality_expression
                    {
                    pushFollow(FOLLOW_equality_expression_in_assignment_expression245);
                    equality_expression();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // CMM.g:83:4: primary_expression assignment_operator assignment_expression
                    {
                    pushFollow(FOLLOW_primary_expression_in_assignment_expression250);
                    primary_expression();

                    state._fsp--;
                    if (state.failed) return ;

                    pushFollow(FOLLOW_assignment_operator_in_assignment_expression252);
                    assignment_operator();

                    state._fsp--;
                    if (state.failed) return ;

                    pushFollow(FOLLOW_assignment_expression_in_assignment_expression254);
                    assignment_expression();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 10, assignment_expression_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "assignment_expression"



    // $ANTLR start "equality_expression"
    // CMM.g:85:1: equality_expression : relational_expression ( EQ_OP relational_expression | NE_OP relational_expression )* ;
    public final void equality_expression() throws RecognitionException {
        int equality_expression_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 11) ) { return ; }

            // CMM.g:86:2: ( relational_expression ( EQ_OP relational_expression | NE_OP relational_expression )* )
            // CMM.g:86:4: relational_expression ( EQ_OP relational_expression | NE_OP relational_expression )*
            {
            pushFollow(FOLLOW_relational_expression_in_equality_expression264);
            relational_expression();

            state._fsp--;
            if (state.failed) return ;

            // CMM.g:86:26: ( EQ_OP relational_expression | NE_OP relational_expression )*
            loop8:
            do {
                int alt8=3;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==EQ_OP) ) {
                    alt8=1;
                }
                else if ( (LA8_0==NE_OP) ) {
                    alt8=2;
                }


                switch (alt8) {
            	case 1 :
            	    // CMM.g:86:28: EQ_OP relational_expression
            	    {
            	    match(input,EQ_OP,FOLLOW_EQ_OP_in_equality_expression268); if (state.failed) return ;

            	    pushFollow(FOLLOW_relational_expression_in_equality_expression270);
            	    relational_expression();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;
            	case 2 :
            	    // CMM.g:86:58: NE_OP relational_expression
            	    {
            	    match(input,NE_OP,FOLLOW_NE_OP_in_equality_expression274); if (state.failed) return ;

            	    pushFollow(FOLLOW_relational_expression_in_equality_expression276);
            	    relational_expression();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 11, equality_expression_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "equality_expression"



    // $ANTLR start "relational_expression"
    // CMM.g:88:1: relational_expression : additive_expression ( '<' additive_expression )* ;
    public final void relational_expression() throws RecognitionException {
        int relational_expression_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 12) ) { return ; }

            // CMM.g:89:2: ( additive_expression ( '<' additive_expression )* )
            // CMM.g:89:4: additive_expression ( '<' additive_expression )*
            {
            pushFollow(FOLLOW_additive_expression_in_relational_expression289);
            additive_expression();

            state._fsp--;
            if (state.failed) return ;

            // CMM.g:89:24: ( '<' additive_expression )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==25) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // CMM.g:89:26: '<' additive_expression
            	    {
            	    match(input,25,FOLLOW_25_in_relational_expression293); if (state.failed) return ;

            	    pushFollow(FOLLOW_additive_expression_in_relational_expression295);
            	    additive_expression();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 12, relational_expression_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "relational_expression"



    // $ANTLR start "additive_expression"
    // CMM.g:91:1: additive_expression : multiplicative_expression ( '+' multiplicative_expression | '-' multiplicative_expression )* ;
    public final void additive_expression() throws RecognitionException {
        int additive_expression_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 13) ) { return ; }

            // CMM.g:92:2: ( multiplicative_expression ( '+' multiplicative_expression | '-' multiplicative_expression )* )
            // CMM.g:92:4: multiplicative_expression ( '+' multiplicative_expression | '-' multiplicative_expression )*
            {
            pushFollow(FOLLOW_multiplicative_expression_in_additive_expression308);
            multiplicative_expression();

            state._fsp--;
            if (state.failed) return ;

            // CMM.g:92:30: ( '+' multiplicative_expression | '-' multiplicative_expression )*
            loop10:
            do {
                int alt10=3;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==17) ) {
                    alt10=1;
                }
                else if ( (LA10_0==20) ) {
                    alt10=2;
                }


                switch (alt10) {
            	case 1 :
            	    // CMM.g:92:32: '+' multiplicative_expression
            	    {
            	    match(input,17,FOLLOW_17_in_additive_expression312); if (state.failed) return ;

            	    pushFollow(FOLLOW_multiplicative_expression_in_additive_expression314);
            	    multiplicative_expression();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;
            	case 2 :
            	    // CMM.g:92:64: '-' multiplicative_expression
            	    {
            	    match(input,20,FOLLOW_20_in_additive_expression318); if (state.failed) return ;

            	    pushFollow(FOLLOW_multiplicative_expression_in_additive_expression320);
            	    multiplicative_expression();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 13, additive_expression_StartIndex); }
